--- a/index.html
+++ b/index.html
@@ -10,125 +10,190 @@
     <header>
       <img class="logo" src="assets/img/logo.svg" alt="logo Booki" />
       <nav>
-        <ul class="nav">
-          <li class="nav__list">
-            <a class="text--blue" href="#accommodation">Hébergements</a>
+        <ul class="nav-list">
+          <li class="nav__item">
+            <a class="text-h-blue" href="#accommodation">Hébergements</a>
           </li>
-          <li class="nav__list">
-            <a class="text--blue" href="#Activities">Activités</a>
+          <li class="nav__item">
+            <a class="text-h-blue" href="#activities">Activités</a>
           </li>
         </ul>
       </nav>
     </header>
     <main>
       <section>
-        <div>
-          <h1 class="title">Trouvez votre hébergement pour des vacances de rêve</h1>
+        <div class="intro">
+          <h1 class="title intro__title">Trouvez votre hébergement pour des vacances de rêve</h1>
           <p class="text">En plein centre-ville ou en pleine nature</p>
         </div>
         <div class="search">
           <form class="search__form" method="get">
             <label class="search__label" for="search">
-              <img src="assets/img/icon location.svg" alt="Icône de localisation" />
+              <img src="assets/img/icon-location.svg" alt="Icône de localisation" />
             </label>
-            <input class="search__bar" type="text" name="search" value="Marseille, France" id="search" />
+            <input class="search__bar label--big" type="text" name="search" value="Marseille, France" id="search" />
             <button class="search__btn" type="submit">Rechercher</button>
           </form>
         </div>
         <ul class="filter">
-          <li class="label-big">Filtre</li>
+          <li class="label--big">Filtre</li>
           <li class="btn">
             <img class="btn__icon" src="assets/img/icon money.svg" alt="Icône de monnaie" />
-            <p class="btn__text label">Économique</p>
+            <p class="label">Économique</p>
           </li>
           <li class="btn">
-            <img class="btn__icon" src="assets/img/icon guys.svg" alt="Icône de bonhomme" />
-            <p class="btn__text label">Familial</p>
+            <img class="btn__icon" src="assets/img/icon-guys.svg" alt="Icône de bonhomme" />
+            <p class="label">Familial</p>
           </li>
           <li class="btn">
-            <img class="btn__icon" src="assets/img/icon heart.svg" alt="Icône de coeur" />
-            <p class="btn__text label">Romantique</p>
+            <img class="btn__icon" src="assets/img/icon-heart.svg" alt="Icône de coeur" />
+            <p class="label">Romantique</p>
           </li>
           <li class="btn">
-            <img class="btn__icon" src="assets/img/icon flame.svg" alt="Icône de flamme" />
-            <p class="btn__text label">Nos pépites</p>
+            <img class="btn__icon" src="assets/img/icon-flame.svg" alt="Icône de flamme" />
+            <p class="label">Nos pépites</p>
           </li>
         </ul>
         <div class="infobar">
-          <img class="info__icon" src="assets/img/icon info.svg" alt="Icône information" />
+          <div class="info__icon">
+            <img src="assets/img/icon-info.svg" alt="Icône information" />
+          </div>
           <p class="text info__text">Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
       </section>
-      <section>
-        <div>
+      <section class="accomodation" id="accommodation">
+        <div class="accomodation__container">
           <h2 class="title">Hébergements à Marseille</h2>
-          <div>
-            <a>
-              <img src="assets/img/H-port.png" alt="Hôtel du port" />
-              <p>Hôtel du port</p>
-              <p>Nuit à partir de 52€</p>
-              <img src="assets/img/4-stars.svg" alt="notation:quatre étoiles" />
+          <div class="container__card">
+            <a href="#hotel-du-port" class="card">
+              <img class="card__img" src="assets/img/H-port.png" alt="Hôtel du port" />
+              <p class="label--small card__text">Hôtel du port</p>
+              <p class="text--small card__text">Nuit à partir de 52€</p>
+              <img class="card__icon" src="assets/img/4-stars.svg" alt="notation:quatre étoiles" />
             </a>
-            <a>
-              <img src="assets/img/H-amina.png" alt="Hôtel Chez Amina" />
-              <p>Hôtel chez Amina</p>
-              <p>Nuit à partir de 96€</p>
-              <img src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
+            <a href="#hotel-chez-amina" class="card">
+              <img class="card__img" src="assets/img/H-amina.png" alt="Hôtel Chez Amina" />
+              <p class="label--small card__text">Hôtel chez Amina</p>
+              <p class="text--small card__text">Nuit à partir de 96€</p>
+              <img class="card__icon" src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
             </a>
-            <a>
-              <img src="assets/img/H-mouettes.png" alt="Hôtel Les mouettes" />
-              <p>Hôtel Les Mouettes</p>
-              <p>Nuit à partir de 76€</p>
-              <img src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
+            <a href="#hotel-les-mouettes" class="card">
+              <img class="card__img" src="assets/img/H-mouettes.png" alt="Hôtel Les mouettes" />
+              <p class="label--small card__text">Hôtel Les Mouettes</p>
+              <p class="text--small card__text">Nuit à partir de 76€</p>
+              <img class="card__icon" src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
             </a>
-            <a>
-              <img src="assets/img/H-mer.png" alt="Hôtel de la mer" />
-              <p>Hôtel de la mer</p>
-              <p>Nuit à partir de 46€</p>
-              <img src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
+            <a href="#hotel-de-la-mer" class="card">
+              <img class="card__img" src="assets/img/H-mer.png" alt="Hôtel de la mer" />
+              <p class="label--small card__text">Hôtel de la mer</p>
+              <p class="text--small card__text">Nuit à partir de 46€</p>
+              <img class="card__icon" src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
             </a>
-            <a>
-              <img src="assets/img/A-canebiere.png" alt="Auberge La Canebière" />
-              <p>Auberge La Canebière</p>
-              <p>Nuit à partir de 25€</p>
-              <img src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
+            <a href="#auberge-la-canebiere" class="card">
+              <img class="card__img" src="assets/img/A-canebiere.png" alt="Auberge La Canebière" />
+              <p class="label--small card__text">Auberge La Canebière</p>
+              <p class="text--small card__text">Nuit à partir de 25€</p>
+              <img class="card__icon" src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
             </a>
-            <a>
-              <img src="assets/img/A-panier.png" alt="Auberge Le Panier" />
-              <p>Auberge Le Panier</p>
-              <p>Nuit à partir de 23€</p>
-              <img src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
+            <a href=""auberge-le-panier" class="card">
+              <img class="card__img" src="assets/img/A-panier.png" alt="Auberge Le Panier" />
+              <p class="label--small card__text">Auberge Le Panier</p>
+              <p class="text--small card__text">Nuit à partir de 23€</p>
+              <img class="card__icon" src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
             </a>
           </div>
-          <button>Afficher plus</button>
+          <button class="btn__more label--big">Afficher plus</button>
         </div>
-        <div>
-          <div>
-            <h2>Les plus populaires</h2>
+        <div class="accomodation__container">
+          <div class="accomodation__title">
+            <h2 class="title">Les plus populaires</h2>
             <img src="assets/img/icon chart.svg" alt="Icône d'un graphique" />
           </div>
-          <ul>
-            <li>
+          <ul class="container__large--card">
+            <li class="large--card">
               <img src="assets/img/H-soleil.png" alt="Hôtel Le soleil du matin" />
-              <p>Hôtel Le soleil du matin</p>
-              <p>Nuit à partir de 25€</p>
-              <img src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
+              <div class="large--card__text">
+                <p class="label--small large--card__title">Hôtel Le soleil du matin</p>
+                <p class="text--small large--card__info">Nuit à partir de 25€</p>
+                <img src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
+              </div>
             </li>
-            <li>
+            <li class="large--card">
               <img src="assets/img/C-eau.png" alt="Chambres d’hôtes Au cœur de l’eau" />
-              <p>Chambres d’hôtes Au cœur de l’eau</p>
-              <p>Nuit à partir de 71€</p>
-              <img src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
+              <div class="large--card__text">
+                <p class="label--small large--card__title">Chambres d’hôtes Au cœur de l’eau</p>
+                <p class="text--small large--card__info">Nuit à partir de 71€</p>
+                <img src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
+              </div>
+            </li>
+            <li class="large--card">
+              <img src="assets/img/H-BetB.png" alt="Hôtel Bleu et Blanc" />
+              <div class="large--card__text">
+                <p class="label--small large--card__title">Hôtel Bleu et Blanc</p>
+                <p class="text--small large--card__info">Nuit à partir de 68€</p>
+                <img src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section id="activities">
+        <div class="activities">
+          <h2 class="title">Activités à Marseille</h2>
+          <ul class="activities__list">
+            <li>
+              <img src="assets/img/Vieux-Port.png" alt="Vieux-Port" />
+              <p>Vieux-Port</p>
             </li>
             <li>
-              <img src="assets/img/H-BetB.png" alt="Hôtel Bleu et Blanc" />
-              <p>Hôtel Bleu et Blanc</p>
-              <p>Nuit à partir de 68€</p>
-              <img src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
+              <img src="assets/img/Pomegues.png" alt="Fort de Pomègues" />
+              <p>Fort de Pomègues</p>
+            </li>
+            <li>
+              <img src="assets/img/Calanques.png" alt="Parc national des Calanques" />
+              <p>Parc national des Calanques</p>
+            </li>
+            <li>
+              <img src="assets/img/N-D-G.png" alt="Notre-Dame-de-la-Garde" />
+              <p>Notre-Dame-de-la-Garde</p>
             </li>
           </ul>
         </div>
       </section>
     </main>
+    <footer>
+      <div>
+        <ul>
+          <li>À propos</li>
+          <li>
+            <a href="#fonctionnement-du-site">Fonctionnement du site</a>
+          </li>
+          <li>
+            <a href="#conditions-générales">Conditions générales</a>
+          </li>
+          <li>
+            <a href="#donnees-et-confidentialites">Données et confidentialité</a>
+          </li>
+        </ul>
+        <ul>
+          <li>Nos hébergements</li>
+          <li>
+            <a href="#charte-qualite">Charte qualité</a>
+          </li>
+          <li>
+            <a href="#proposer-votre-hotel">Proposer votre hôtel</a>
+          </li>
+        </ul>
+        <ul>
+          <li>Assistance</li>
+          <li>
+            <a href="#centre-d-aide">Centre d’aide</a>
+          </li>
+          <li>
+            <a href="#nous-contacter">Nous contacter</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
