--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <img class="logo" src="assets/img/logo.svg" alt="logo Booki" />
-      <nav>
+      <nav class="nav">
         <ul class="nav-list">
           <li class="nav__item">
             <a class="text-h-blue" href="#accommodation">Hébergements</a>
@@ -20,8 +20,8 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <section>
+    <main class="home-page">
+      <section class="search-section">
         <div class="intro">
           <h1 class="title intro__title">Trouvez votre hébergement pour des vacances de rêve</h1>
           <p class="text">En plein centre-ville ou en pleine nature</p>
@@ -32,28 +32,33 @@
               <img src="assets/img/icon-location.svg" alt="Icône de localisation" />
             </label>
             <input class="search__bar label--big" type="text" name="search" value="Marseille, France" id="search" />
-            <button class="search__btn" type="submit">Rechercher</button>
+            <button class="search__btn" type="submit">
+              <span class="search__btn-text label--big--white">Rechercher</span>
+              <img class="search__btn-icon" src="assets/img/icon-glass.svg" alt="Icône de loupe" />
+            </button>
           </form>
         </div>
-        <ul class="filter">
-          <li class="label--big">Filtre</li>
-          <li class="btn">
-            <img class="btn__icon" src="assets/img/icon money.svg" alt="Icône de monnaie" />
-            <p class="label">Économique</p>
-          </li>
-          <li class="btn">
-            <img class="btn__icon" src="assets/img/icon-guys.svg" alt="Icône de bonhomme" />
-            <p class="label">Familial</p>
-          </li>
-          <li class="btn">
-            <img class="btn__icon" src="assets/img/icon-heart.svg" alt="Icône de coeur" />
-            <p class="label">Romantique</p>
-          </li>
-          <li class="btn">
-            <img class="btn__icon" src="assets/img/icon-flame.svg" alt="Icône de flamme" />
-            <p class="label">Nos pépites</p>
-          </li>
-        </ul>
+        <div class="filter">
+          <div class="label--big filter__title">Filtre</div>
+          <ul class="filter__list">
+            <li class="btn">
+              <img class="btn__icon" src="assets/img/icon-money.svg" alt="Icône de monnaie" />
+              <p class="label">Économique</p>
+            </li>
+            <li class="btn">
+              <img class="btn__icon" src="assets/img/icon-guys.svg" alt="Icône de bonhomme" />
+              <p class="label">Familial</p>
+            </li>
+            <li class="btn">
+              <img class="btn__icon" src="assets/img/icon-heart.svg" alt="Icône de coeur" />
+              <p class="label">Romantique</p>
+            </li>
+            <li class="btn">
+              <img class="btn__icon" src="assets/img/icon-flame.svg" alt="Icône de flamme" />
+              <p class="label">Nos pépites</p>
+            </li>
+          </ul>
+        </div>
         <div class="infobar">
           <div class="info__icon">
             <img src="assets/img/icon-info.svg" alt="Icône information" />
@@ -61,139 +66,179 @@
           <p class="text info__text">Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
       </section>
-      <section class="accomodation" id="accommodation">
+      <section class="accommodation-section accomodation" id="accommodation">
         <div class="accomodation__container">
           <h2 class="title">Hébergements à Marseille</h2>
           <div class="container__card">
             <a href="#hotel-du-port" class="card">
-              <img class="card__img" src="assets/img/H-port.png" alt="Hôtel du port" />
+              <div class="card__frame">
+                <img class="card__img" src="assets/img/H-port.jpg" alt="Hôtel du port" />
+              </div>
               <p class="label--small card__text">Hôtel du port</p>
               <p class="text--small card__text">Nuit à partir de 52€</p>
-              <img class="card__icon" src="assets/img/4-stars.svg" alt="notation:quatre étoiles" />
+              <img class="card__icon" src="assets/img/icon-stars.svg" alt="notation:quatre étoiles" />
             </a>
             <a href="#hotel-chez-amina" class="card">
-              <img class="card__img" src="assets/img/H-amina.png" alt="Hôtel Chez Amina" />
+              <div class="card__frame">
+                <img class="card__img" src="assets/img/H-amina.jpg" alt="Hôtel Chez Amina" />
+              </div>
               <p class="label--small card__text">Hôtel chez Amina</p>
               <p class="text--small card__text">Nuit à partir de 96€</p>
-              <img class="card__icon" src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
+              <img class="card__icon" src="assets/img/icon-stars.svg" alt="notation: quatre étoiles" />
             </a>
             <a href="#hotel-les-mouettes" class="card">
-              <img class="card__img" src="assets/img/H-mouettes.png" alt="Hôtel Les mouettes" />
+              <div class="card__frame">
+                <img class="card__img" src="assets/img/H-mouettes.jpg" alt="Hôtel Les mouettes" />
+              </div>
               <p class="label--small card__text">Hôtel Les Mouettes</p>
               <p class="text--small card__text">Nuit à partir de 76€</p>
-              <img class="card__icon" src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
+              <img class="card__icon" src="assets/img/icon-stars.svg" alt="notation: quatre étoiles" />
             </a>
             <a href="#hotel-de-la-mer" class="card">
-              <img class="card__img" src="assets/img/H-mer.png" alt="Hôtel de la mer" />
+              <div class="card__frame">
+                <img class="card__img" src="assets/img/H-mer.jpg" alt="Hôtel de la mer" />
+              </div>
               <p class="label--small card__text">Hôtel de la mer</p>
               <p class="text--small card__text">Nuit à partir de 46€</p>
-              <img class="card__icon" src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
+              <img class="card__icon" src="assets/img/icon-stars.svg" alt="notation: quatre étoiles" />
             </a>
             <a href="#auberge-la-canebiere" class="card">
-              <img class="card__img" src="assets/img/A-canebiere.png" alt="Auberge La Canebière" />
+              <div class="card__frame">
+                <img class="card__img" src="assets/img/A-canebiere.jpg" alt="Auberge La Canebière" />
+              </div>
               <p class="label--small card__text">Auberge La Canebière</p>
               <p class="text--small card__text">Nuit à partir de 25€</p>
-              <img class="card__icon" src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
+              <img class="card__icon" src="assets/img/icon-stars.svg" alt="notation: quatre étoiles" />
             </a>
-            <a href=""auberge-le-panier" class="card">
-              <img class="card__img" src="assets/img/A-panier.png" alt="Auberge Le Panier" />
+            <a href="#auberge-le-panier" class="card">
+              <div class="card__frame">
+                <img class="card__img" src="assets/img/A-panier.jpg" alt="Auberge Le Panier" />
+              </div>
               <p class="label--small card__text">Auberge Le Panier</p>
               <p class="text--small card__text">Nuit à partir de 23€</p>
-              <img class="card__icon" src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
+              <img class="card__icon" src="assets/img/icon-stars.svg" alt="notation: quatre étoiles" />
             </a>
           </div>
           <button class="btn__more label--big">Afficher plus</button>
         </div>
-        <div class="accomodation__container">
+      </section>
+      <section class="popular-accommodation-section accommodation">
+        <div class="popular-accomodation__container">
           <div class="accomodation__title">
             <h2 class="title">Les plus populaires</h2>
-            <img src="assets/img/icon chart.svg" alt="Icône d'un graphique" />
+            <img src="assets/img/icon-chart.svg" alt="Icône d'un graphique" />
           </div>
           <ul class="container__large--card">
-            <li class="large--card">
-              <img src="assets/img/H-soleil.png" alt="Hôtel Le soleil du matin" />
-              <div class="large--card__text">
-                <p class="label--small large--card__title">Hôtel Le soleil du matin</p>
-                <p class="text--small large--card__info">Nuit à partir de 25€</p>
-                <img src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
-              </div>
+            <li>
+              <a class="large--card" href="#hotel-le-soleil-du-matin">
+                <div class="large--card__frame">
+                  <img class="large--card__img" src="assets/img/H-soleil.jpg" alt="Hôtel Le soleil du matin" />
+                </div>
+                <div class="large--card__info">
+                  <p class="label--small large--card__title">Hôtel Le soleil du matin</p>
+                  <p class="text--small">Nuit à partir de 25€</p>
+                  <img class="large--card__icon" src="assets/img/icon-stars.svg" alt="notation: quatre étoiles" />
+                </div>
+              </a>
             </li>
-            <li class="large--card">
-              <img src="assets/img/C-eau.png" alt="Chambres d’hôtes Au cœur de l’eau" />
-              <div class="large--card__text">
-                <p class="label--small large--card__title">Chambres d’hôtes Au cœur de l’eau</p>
-                <p class="text--small large--card__info">Nuit à partir de 71€</p>
-                <img src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
-              </div>
+            <li>
+              <a class="large--card" href="#chanbres-d-hotes-au-coeur-de-l-eau">
+                <div class="large--card__frame">
+                  <img class="large--card__img" src="assets/img/C-eau.jpg" alt="Chambres d’hôtes Au cœur de l’eau" />
+                </div>
+                <div class="large--card__info">
+                  <p class="label--small large--card__title">Chambres d’hôtes Au cœur de l’eau</p>
+                  <p class="text--small">Nuit à partir de 71€</p>
+                  <img class="large--card__icon" src="assets/img/icon-stars.svg" alt="notation: quatre étoiles" />
+                </div>
+              </a>
             </li>
-            <li class="large--card">
-              <img src="assets/img/H-BetB.png" alt="Hôtel Bleu et Blanc" />
-              <div class="large--card__text">
-                <p class="label--small large--card__title">Hôtel Bleu et Blanc</p>
-                <p class="text--small large--card__info">Nuit à partir de 68€</p>
-                <img src="assets/img/4-stars.svg" alt="notation: quatre étoiles" />
-              </div>
+            <li>
+              <a class="large--card" href="#hotel-bleu-et-blanc">
+                <div class="large--card__frame">
+                  <img class="large--card__img" src="assets/img/H-BetB.jpg" alt="Hôtel Bleu et Blanc" />
+                </div>
+                <div class="large--card__info">
+                  <p class="label--small large--card__title">Hôtel Bleu et Blanc</p>
+                  <p class="text--small">Nuit à partir de 68€</p>
+                  <img class="large--card__icon" src="assets/img/icon-stars.svg" alt="notation: quatre étoiles" />
+                </div>
+              </a>
             </li>
           </ul>
         </div>
       </section>
-      <section id="activities">
+      <section class="activities-section" id="activities">
         <div class="activities">
           <h2 class="title">Activités à Marseille</h2>
           <ul class="activities__list">
-            <li>
-              <img src="assets/img/Vieux-Port.png" alt="Vieux-Port" />
-              <p>Vieux-Port</p>
+            <li class="high--card">
+              <a href="#vieux-port">
+                <div class="high--card__frame">
+                  <img class="high--card__img" src="assets/img/Vieux-port.jpg" alt="Vieux-Port" />
+                </div>
+                <p class="high--card__text label--small">Vieux-Port</p>
+              </a>
             </li>
-            <li>
-              <img src="assets/img/Pomegues.png" alt="Fort de Pomègues" />
-              <p>Fort de Pomègues</p>
+            <li class="high--card">
+              <a href="#fort-de-pomegues">
+                <div class="high--card__frame">
+                  <img class="high--card__img" src="assets/img/Pomegues.jpg" alt="Fort de Pomègues" />
+                </div>
+                <p class="high--card__text label--small">Fort de Pomègues</p>
+              </a>
             </li>
-            <li>
-              <img src="assets/img/Calanques.png" alt="Parc national des Calanques" />
-              <p>Parc national des Calanques</p>
+            <li class="high--card">
+              <a href="#parc-national-des-calanques">
+                <div class="high--card__frame">
+                  <img class="high--card__img" src="assets/img/Calanques.jpg" alt="Parc national des Calanques" />
+                </div>
+                <p class="high--card__text label--small">Parc national des Calanques</p>
+              </a>
             </li>
-            <li>
-              <img src="assets/img/N-D-G.png" alt="Notre-Dame-de-la-Garde" />
-              <p>Notre-Dame-de-la-Garde</p>
+            <li class="high--card">
+              <a href="#notre-dame-de-la-garde">
+                <div class="high--card__frame">
+                  <img class="high--card__img" src="assets/img/N-D-G.jpg" alt="Notre-Dame-de-la-Garde" />
+                </div>
+                <p class="high--card__text label--small">Notre-Dame-de-la-Garde</p>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
-    <footer>
-      <div>
-        <ul>
-          <li>À propos</li>
-          <li>
-            <a href="#fonctionnement-du-site">Fonctionnement du site</a>
-          </li>
-          <li>
-            <a href="#conditions-générales">Conditions générales</a>
-          </li>
-          <li>
-            <a href="#donnees-et-confidentialites">Données et confidentialité</a>
-          </li>
-        </ul>
-        <ul>
-          <li>Nos hébergements</li>
-          <li>
-            <a href="#charte-qualite">Charte qualité</a>
-          </li>
-          <li>
-            <a href="#proposer-votre-hotel">Proposer votre hôtel</a>
-          </li>
-        </ul>
-        <ul>
-          <li>Assistance</li>
-          <li>
-            <a href="#centre-d-aide">Centre d’aide</a>
-          </li>
-          <li>
-            <a href="#nous-contacter">Nous contacter</a>
-          </li>
-        </ul>
-      </div>
+    <footer class="footer">
+      <ul>
+        <li class="label--big footer__text">À propos</li>
+        <li class="text footer__text">
+          <a href="#fonctionnement-du-site">Fonctionnement du site</a>
+        </li>
+        <li class="text footer__text">
+          <a href="#conditions-générales">Conditions générales</a>
+        </li>
+        <li class="text footer__text">
+          <a href="#donnees-et-confidentialites">Données et confidentialité</a>
+        </li>
+      </ul>
+      <ul>
+        <li class="label--big footer__text">Nos hébergements</li>
+        <li class="text footer__text">
+          <a href="#charte-qualite">Charte qualité</a>
+        </li>
+        <li class="text footer__text">
+          <a href="#proposer-votre-hotel">Proposer votre hôtel</a>
+        </li>
+      </ul>
+      <ul>
+        <li class="label--big footer__text">Assistance</li>
+        <li class="text footer__text">
+          <a href="#centre-d-aide">Centre d’aide</a>
+        </li>
+        <li class="text footer__text">
+          <a href="#nous-contacter">Nous contacter</a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
