Adjustment of star icons and fixing of the search bar button display issue

--- a/index.html
+++ b/index.html
@@ -82,7 +82,13 @@
                     <p class="label--small card__title">Hôtel du port</p>
                     <p class="text--small">Nuit à partir de 52€</p>
                   </div>
-                  <img class="card__icon" src="assets/img/icon-stars.svg" alt="notation:quatre étoiles" />
+                  <ul class="icon-star">
+                    <li class="star blue-star"></li>
+                    <li class="star blue-star"></li>
+                    <li class="star blue-star"></li>
+                    <li class="star blue-star"></li>
+                    <li class="star"></li>
+                  </ul>
                 </div>
               </a>
               <a href="#hotel-chez-amina" class="card">
@@ -94,7 +100,13 @@
                     <p class="label--small card__title">Hôtel chez Amina</p>
                     <p class="text--small">Nuit à partir de 96€</p>
                   </div>
-                  <img class="card__icon" src="assets/img/icon-stars.svg" alt="notation: quatre étoiles" />
+                  <ul class="icon-star">
+                    <li class="star blue-star"></li>
+                    <li class="star blue-star"></li>
+                    <li class="star blue-star"></li>
+                    <li class="star blue-star"></li>
+                    <li class="star"></li>
+                  </ul>
                 </div>
               </a>
               <a href="#hotel-les-mouettes" class="card">
@@ -106,7 +118,13 @@
                     <p class="label--small card__title">Hôtel Les Mouettes</p>
                     <p class="text--small">Nuit à partir de 76€</p>
                   </div>
-                  <img class="card__icon" src="assets/img/icon-stars.svg" alt="notation: quatre étoiles" />
+                  <ul class="icon-star">
+                    <li class="star blue-star"></li>
+                    <li class="star blue-star"></li>
+                    <li class="star blue-star"></li>
+                    <li class="star blue-star"></li>
+                    <li class="star"></li>
+                  </ul>
                 </div>
               </a>
               <a href="#hotel-de-la-mer" class="card">
@@ -118,7 +136,13 @@
                     <p class="label--small card__title">Hôtel de la mer</p>
                     <p class="text--small">Nuit à partir de 46€</p>
                   </div>
-                  <img class="card__icon" src="assets/img/icon-stars.svg" alt="notation: quatre étoiles" />
+                  <ul class="icon-star">
+                    <li class="star blue-star"></li>
+                    <li class="star blue-star"></li>
+                    <li class="star blue-star"></li>
+                    <li class="star blue-star"></li>
+                    <li class="star"></li>
+                  </ul>
                 </div>
               </a>
               <a href="#auberge-la-canebiere" class="card">
@@ -130,7 +154,13 @@
                     <p class="label--small card__title">Auberge La Canebière</p>
                     <p class="text--small">Nuit à partir de 25€</p>
                   </div>
-                  <img class="card__icon" src="assets/img/icon-stars.svg" alt="notation: quatre étoiles" />
+                  <ul class="icon-star">
+                    <li class="star blue-star"></li>
+                    <li class="star blue-star"></li>
+                    <li class="star blue-star"></li>
+                    <li class="star blue-star"></li>
+                    <li class="star"></li>
+                  </ul>
                 </div>
               </a>
               <a href="#auberge-le-panier" class="card">
@@ -142,7 +172,13 @@
                     <p class="label--small card__title">Auberge Le Panier</p>
                     <p class="text--small">Nuit à partir de 23€</p>
                   </div>
-                  <img class="card__icon" src="assets/img/icon-stars.svg" alt="notation: quatre étoiles" />
+                  <ul class="icon-star">
+                    <li class="star blue-star"></li>
+                    <li class="star blue-star"></li>
+                    <li class="star blue-star"></li>
+                    <li class="star blue-star"></li>
+                    <li class="star"></li>
+                  </ul>
                 </div>
               </a>
             </div>
@@ -164,7 +200,13 @@
                   <div class="large--card__info">
                     <p class="label--small large--card__title">Hôtel Le soleil du matin</p>
                     <p class="text--small">Nuit à partir de 25€</p>
-                    <img class="large--card__icon" src="assets/img/icon-stars.svg" alt="notation: quatre étoiles" />
+                    <ul class="large--card__icon icon-star">
+                      <li class="star blue-star star-small"></li>
+                      <li class="star blue-star star-small"></li>
+                      <li class="star blue-star star-small"></li>
+                      <li class="star blue-star star-small"></li>
+                      <li class="star star-small"></li>
+                    </ul>
                   </div>
                 </a>
               </li>
@@ -176,7 +218,13 @@
                   <div class="large--card__info">
                     <p class="label--small large--card__title">Chambres d’hôtes Au cœur de l’eau</p>
                     <p class="text--small">Nuit à partir de 71€</p>
-                    <img class="large--card__icon" src="assets/img/icon-stars.svg" alt="notation: quatre étoiles" />
+                    <ul class="large--card__icon icon-star">
+                      <li class="star blue-star star-small"></li>
+                      <li class="star blue-star star-small"></li>
+                      <li class="star blue-star star-small"></li>
+                      <li class="star blue-star star-small"></li>
+                      <li class="star star-small"></li>
+                    </ul>
                   </div>
                 </a>
               </li>
@@ -188,7 +236,13 @@
                   <div class="large--card__info">
                     <p class="label--small large--card__title">Hôtel Bleu et Blanc</p>
                     <p class="text--small">Nuit à partir de 68€</p>
-                    <img class="large--card__icon" src="assets/img/icon-stars.svg" alt="notation: quatre étoiles" />
+                    <ul class="large--card__icon icon-star">
+                      <li class="star blue-star star-small"></li>
+                      <li class="star blue-star star-small"></li>
+                      <li class="star blue-star star-small"></li>
+                      <li class="star blue-star star-small"></li>
+                      <li class="star star-small"></li>
+                    </ul>
                   </div>
                 </a>
               </li>
